--- a/templates/index.html
+++ b/templates/index.html
@@ -115,8 +115,8 @@
       
         <div class="row" id="appSummary">
           
-            <h1>Accuracy Parking lot information</h1>
-            <p class="lead">good performance， high accuracy</p>
+            <h1>WINLAB Parking Lot</h1>
+            <p class="lead">There are ___ parking spaces available</p>
           
           </div>
           
